--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+	  <div class="hero">
+    <div class="hero-content">
+      <h1>Discover New Ideas</h1>
+      <p>Explore amazing content tailored just for you.</p>
+      <a href="#" class="explore-btn">Explore Now</a>
+    </div>
+    <div class="hero-image">
+      <img src="https://source.unsplash.com/featured/?pinterest" alt="Pinterest Style" />
+    </div>
+  </div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
